getLast24HrsConsumption & device based readings
